In Gmail class, double ended queue replaced by arraylist.