@@ -8,19 +8,14 @@ public class Gmail extends Email {
     int inboxCapacity; //maximum number of mails inbox can store
     //Inbox: Stores mails. Each mail has date (Date), sender (String), message (String). It is guaranteed that message is distinct for all mails.
     //Trash: Stores mails. Each mail has date (Date), sender (String), message (String)
-    private HashMap<String,Address > hminbox;
-    //private HashMap<String,Message > hmtrash;
-    private Deque<String> inbox;
-    private Stack<String> trash;
-    private Stack <String> temp;
+    private ArrayList<Address> inbox;
+    private ArrayList<Address> trash;
 
     public Gmail(String emailId, int inboxCapacity) {
               super(emailId);
              this.inboxCapacity = inboxCapacity;
-            hminbox = new HashMap<>();
-            inbox = new LinkedList<String>();
-            trash = new Stack<>();
-           // hmtrash = new HashMap<>();
+            inbox = new ArrayList<>();
+            trash = new ArrayList<>();
     }
 
     public void receiveMail(Date date, String sender, String message){
@@ -29,54 +24,47 @@ public class Gmail extends Email {
         // 1. Each mail in the inbox is distinct.
         // 2. The mails are received in non-decreasing order. This means that the date of a new mail is greater than equal to the dates of mails received already.
             if(inbox.size()>=getInboxCapacity()){
-                trash.push(findOldestMessage());
-                hminbox.remove(findOldestMessage());
-                inbox.removeLast();
+                trash.add(inbox.get(0));
+                inbox.remove(0);
             }
-            hminbox.put(message, new Address(date,sender));
-            inbox.addFirst(message);
+            inbox.add(new Address(message,date,sender));
     }
 
     public void deleteMail(String message){
         // Each message is distinct
         // If the given message is found in any mail in the inbox, move the mail to trash, else do nothing
-         if(hminbox.containsKey(message)){
-             temp = new Stack<>();
-             while(inbox.size()>0 && !inbox.peekFirst().equals(message)){
-                 temp.push(inbox.removeFirst());
+        for(int i =0;i<inbox.size();i++){
+            Address m = inbox.get(i);
+            //if(m.message==null) continue;
+            if(m.message.equals(message)){
+                trash.add(m);
+              inbox.remove(i);
+               return;
              }
-             String copy = inbox.removeFirst();
-            // hmtrash.put(copy,hminbox.get(copy));
-             hminbox.remove(copy);
-             trash.push(copy);
-             while(temp.size()>0){
-                 inbox.addFirst(temp.pop());
-             }
-         }
+          }
+
     }
 
     public String findLatestMessage(){
         // If the inbox is empty, return null
         // Else, return the message of the latest mail present in the inbox
           if(inbox.size()==0) return null;
-          else return inbox.peekFirst();
+          else return inbox.get(inbox.size()-1).message;
     }
 
     public String findOldestMessage(){
         // If the inbox is empty, return null
         // Else, return the message of the oldest mail present in the inbox
         if(inbox.size()==0) return null;
-        else return inbox.peekLast();
+        else return inbox.get(0).message;
     }
 
     public int findMailsBetweenDates(Date start, Date end){
         //find number of mails in the inbox which are received between given dates
         //It is guaranteed that start date <= end date
         int count = 0;
-        for (Iterator itr = inbox.iterator();
-             itr.hasNext();) {
-           String s = (String)itr.next();
-           Address m = hminbox.get(s);
+           for(int i =0;i<inbox.size();i++){
+               Address m = inbox.get(i);
            if(m.date.compareTo(start)>=0 && m.date.compareTo(end)<=0){
                count++;
            }
@@ -96,21 +84,21 @@ public class Gmail extends Email {
 
     public void emptyTrash(){
         // clear all mails in the trash
-         while(trash.size()>0) {
-             trash.pop();
-         }
+         trash.clear();
     }
 
     public int getInboxCapacity() {
         // Return the maximum number of mails that can be stored in the inbox
         return this.inboxCapacity;
     }
-    class Address{
+   private class Address{
         String sender;
         Date date;
-       Address(Date date,String sender ){
+        String message;
+       Address(String message, Date date,String sender ){
             this.date = date;
             this.sender = sender;
+            this.message = message;
         }
     }
 }
